# web-search-tool

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  langgraph.json  main.py  pyproject.toml  tavily-search-response-example.json
.github/workflows/: ci.yml
app/: __init__.py  agent.py  config.py  db.py  llm.py  tavily.py  tools.py
app/agents/: __init__.py  constants.py  guide.py  product_search.py  search.py  states.py  supervisor.py  tools.py
app/agents/guide/: __init__.py  agent.py
app/agents/product_search/: __init__.py  agent.py  nodes.py  state.py  tools.py
app/agents/products/: __init__.py  agent.py  constants.py  nodes.py  prompt.py  schemas.py  state.py  tools.py
app/agents/supervisor/: __init__.py  agent.py  prompt.py  schemas.py
app/api/: __init__.py  chat.py  deps.py
app/api/routers/: chat.py
app/core/agents/: __init__.py
app/core/agents/guide/: __init__.py  agent.py  prompt.py
app/core/agents/products/: __init__.py  agent.py  nodes.py  prompt.py  tools.py
app/core/agents/supervisor/: __init__.py  agent.py  prompt.py  schemas.py
app/core/services/: chat.py
tests/: utils.py
tests/unit/agents/guide/: test_agent.py
tests/unit/agents/products/: test_agent.py  test_nodes.py
tests/unit/agents/supervisor/: test_agent.py
tests/unit/api/routers/: test_chat.py
tests/unit/core/agents/guide/: test_agent.py
tests/unit/core/agents/products/: test_agent.py  test_nodes.py
tests/unit/core/agents/supervisor/: test_agent.py
tests/unit/core/services/: test_chat.py
