[project]
name = "web-search-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-core>=1.4.8",
    "langchain[openai]>=1.3.10,<1.3.11", # 1.3.11 imports langgraph.graph.states (plural), not in published langgraph 1.2.6
    "langgraph>=1.2.6",
    "pydantic-settings>=2.14.2",
    "rich>=15.0.0",
    "tavily-python>=0.7.26",
]

[dependency-groups]
dev = [
    "taskipy>=1.14.1",
    "langgraph-cli[inmem]>=0.4.30",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.11",
    "ty>=0.0.55",
]

[tool.ruff]
line-length = 88
indent-width = 4
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = ["I", "F", "E", "W", "PL", "PT"]
ignore = [
    "T201",   # Checks for print statements, 
    "COM812", # Checks for the absence of trailing commas.
    "INP001", # Checks for packages that are missing an __init__.py file.
    "D",      # All pydocstyle (D)
    "ANN401", # Checks that function arguments are annotated with a more specific type than Any.
    "ERA001", # Checks for commented-out Python code.
    "A004",   # Shadowing Python Builtin
]

[tool.ty.rules]
missing-type-argument = "error"
possibly-unresolved-reference = "warn"

[tool.pyright]
typeCheckingMode = "standard"
reportMissingTypeStubs = false


[tool.taskipy.tasks]
main = "uv run --env-file=.env main.py"
lint = "ty check && ruff check"
format = "ruff format"
langsmith = "uv run --env-file=.env langgraph dev --config ./langgraph.json"
